@@ -1,3 +1,7 @@
+2006-07-12 Borut Razem <borut.razem AT siol.net>
+
+	* index.php: sdcc 2.6.0 RC1 announced
+
 2006-07-10 Borut Razem <borut.razem AT siol.net>
 
 	* snap.php: support for i586-mingw32msvc snapshots
